# dev-newtutils

./: .gitignore  AUTHORS  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  INSTALLATION.md  LICENSE  README.md  TODO  pyproject.toml  requirements.txt
newtutils/: __init__.py  console.py  files.py  network.py  sql.py  utility.py
tests/: README.md  _list.sh  console.py  console_output.txt  files.py  files_output.txt  helpers.py  network.py  network_output.txt  sql.py  sql_output.txt  test_console.py  test_console_output_1.txt  test_console_output_2.txt  test_console_output_3.txt  test_console_output_4.txt  test_files.py  test_files_output_1.txt  test_files_output_2.txt  test_files_output_3.txt  test_files_output_4.txt  test_network.py  test_network_output_1.txt  test_network_output_2.txt  test_network_output_3.txt  test_network_output_4.txt  test_sql.py  test_sql_output_1.txt  test_sql_output_2.txt  test_sql_output_3.txt  test_sql_output_4.txt  test_utility.py  test_utility_output_1.txt  test_utility_output_2.txt  test_utility_output_3.txt  test_utility_output_4.txt  utility.py  utility_output.txt
tests/files_data/: example.csv  example.json  example.txt
tests/output/: test_console_1.txt  test_console_2.txt  test_console_3.txt  test_console_4.txt  test_files_1.txt  test_files_2.txt  test_files_3.txt  test_files_4.txt  test_network_1.txt  test_network_2.txt  test_network_3.txt  test_network_4.txt  test_sql_1.txt  test_sql_2.txt  test_sql_3.txt  test_sql_4.txt  test_utility_1.txt  test_utility_2.txt  test_utility_3.txt  test_utility_4.txt  venv310_test_console_1.txt  venv310_test_console_2.txt  venv310_test_console_3.txt  venv310_test_console_4.txt  venv310_test_files_1.txt  venv310_test_files_2.txt  venv310_test_files_3.txt  venv310_test_files_4.txt  venv310_test_sql_1.txt  venv310_test_sql_2.txt  venv310_test_sql_3.txt  venv310_test_sql_4.txt  venv310_test_utility_1.txt  venv310_test_utility_2.txt  venv310_test_utility_3.txt  venv310_test_utility_4.txt  venv311_test_console_1.txt  venv311_test_console_2.txt  venv311_test_console_3.txt  venv311_test_console_4.txt  (+76 more)
tests/sql_data/: items.csv
