[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newtutils"
version = "0.1.5"
description = "A collection of developer utilities and helpers by NewtCode."
authors = [
  { name = "Anna Burova", email = "burova.anna+newt@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "colorama>=0.4.6"
]
keywords = [
  "utilities", "console", "validation", "files", "sorting",
  "sql", "database", "sqlite", "helpers", "newtutils"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/AnnaBurova/dev-newtutils"
repository = "https://github.com/AnnaBurova/dev-newtutils"
issues = "https://github.com/AnnaBurova/dev-newtutils/issues"
changelog = "https://github.com/AnnaBurova/dev-newtutils/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["newtutils"]
exclude = ["tests", "tests.*"]

[tool.setuptools]
zip-safe = false
