[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newtutils"
version = "1.0.0"
description = "A modular Python toolkit providing reusable utilities for console messaging, input validation, sorting, file I/O, SQL, and network operations"
authors = [
  { name = "Anna Burova", email = "burova.anna+newt@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "colorama>=0.4.6",
  "requests>=2.31.0"
]
keywords = [
  "utilities", "console", "validation", "files", "sorting",
  "sql", "database", "sqlite", "helpers", "newtutils"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]

[project.urls]
homepage = "https://github.com/AnnaBurova/dev-newtutils"
repository = "https://github.com/AnnaBurova/dev-newtutils"
issues = "https://github.com/AnnaBurova/dev-newtutils/issues"
changelog = "https://github.com/AnnaBurova/dev-newtutils/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["newtutils"]
exclude = ["tests", "tests.*"]

[tool.setuptools]
zip-safe = false
