[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NewtUtils"
version = "0.3.0"
description = "NewtUtils — A collection of utility functions for common programming tasks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }

authors = [
  { name = "Anna Burova", email = "burova.anna+newt@gmail.com" }
]

dependencies = [
  "colorama>=0.4.6",
  "requests>=2.33.1",
]

keywords = [
  "console",
  "database",
  "files",
  "helpers",
  "newtutils",
  "sorting",
  "sql",
  "sqlite",
  "utilities",
  "validation",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.3",
]

[project.urls]
homepage = "https://github.com/AnnaBurova/dev-newtutils"
repository = "https://github.com/AnnaBurova/dev-newtutils"
issues = "https://github.com/AnnaBurova/dev-newtutils/issues"
changelog = "https://github.com/AnnaBurova/dev-newtutils/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["newtutils"]
only-packages = true

[tool.hatch.build.targets.sdist]
only-include = [
  "newtutils",
]
exclude = [
]
